--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/minujames/constructor-hangman/issues"
   },
-  "homepage": "https://github.com/minujames/constructor-hangman#readme"
+  "homepage": "https://github.com/minujames/constructor-hangman#readme",
+  "dependencies": {
+    "inquirer": "^3.3.0"
+  }
 }
